--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = ">=3.13"
 dependencies = [
     "aiogram[all] (>=3.22.0,<4.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
-    "black (>=25.1.0,<26.0.0)"
+    "black (>=25.1.0,<26.0.0)",
+    "sqlalchemy (>=2.0.43,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)"
 ]
 
 
