--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,16 @@ dependencies = [
     "dotenv (>=0.9.9,<0.10.0)",
     "black (>=25.1.0,<26.0.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)"
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "pytest-asyncio (>=1.2.0,<2.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.2"
+pytest-asyncio = "^1.2.0"
+
