--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,5 +48,9 @@ jobs:
           TOKEN: ${{ secrets.TOKEN }}
           ADMIN_ID: ${{ secrets.ADMIN_ID }}
           SQLALCHEMY_URL: ${{ secrets.SQLALCHEMY_URL }}
-        run: poetry run pytest tests/ -v
+        run: |
+          echo "TOKEN: $TOKEN"
+          echo "ADMIN_ID: $ADMIN_ID"
+          echo "SQLALCHEMY_URL: $SQLALCHEMY_URL"
+          poetry run pytest tests/ -v
 
